--- a/src/app/reporte/reporte.component.html
+++ b/src/app/reporte/reporte.component.html
@@ -1,1 +1,48 @@
-<p>reporte works!</p>
+
+<div class="container">
+    REPORTE DE PAGO IMPUESTO RENTA
+    <div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Tipo Gasto</th>
+                    <th scope="col">RUC</th>
+                    <th scope="col">Valor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let gasto of gastos">
+                    <th scope="row">{{gasto.id}}</th>
+                    <td>{{gasto.tipo}}</td>
+                    <td>{{gasto.ruc}}</td>
+                    <td>{{gasto.valor}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+
+    USUARIOS
+    <div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Login</th>
+                    <th scope="col">Correo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let user of users">
+                    <th scope="row">{{user.id}}</th>
+                    <td>{{user.name}}</td>
+                    <td>{{user.username}}</td>
+                    <td>{{user.email}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
